--- a/Email_Template Markup/Diploma.html
+++ b/Email_Template Markup/Diploma.html
@@ -1,11 +1,11 @@
 <html>
-<table align="center" background="C:\Users\kelly\Documents\Prestige\diploma_lettersize_150dpi.png" border="0" style="background-size: cover; padding-right:100px; ">
+<table align="center" background="C:\Users\kelly\Documents\Prestige\diploma_lettersize_150dpi.png" border="0" style="background-size: cover;">
 	<tbody>
 		<tr>
 			<td width="1500" height="1125"> <!-- width="1650" height="1275" -->
 				<p align="center">
 					<span style="font-family: Artifika;">
-					<span style="font-size: 400%;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BENE'S CAREER ACADEMY<br></span><span style="font-size:150%"><br><br></span></span>
+					<span style="font-size: 400%;"><br>BENE'S CAREER ACADEMY<br></span><span style="font-size:150%"><br><br></span></span>
 				</p>
 				<p align="center">
 					<span style="font-family: Times New Roman; font-size:150%;">This certifies that<br><br><br></span>
