--- a/Email_Template Markup/Diploma.html
+++ b/Email_Template Markup/Diploma.html
@@ -1,50 +1,30 @@
-<html>
-<table align="center" background="C:\Users\kelly\Documents\Prestige\diploma_lettersize_150dpi.png" border="0" style="background-size: cover;">
+<!-- This is a version of the new diploma template for Bene's career academy. The background image was created in Photoshop and exported as an 11"x8.5", 150dpi .png file. The text for this document is derived from an example Dave had on hand, and the structure of this document is a modified version of the existing diploma. -->
+<table align="center" border="0" background="https://i.imgur.com/ZYdG1P2.png" style="background-size: contain; background-repeat: no-repeat;">
 	<tbody>
 		<tr>
-			<td width="1500" height="1125"> <!-- width="1650" height="1275" -->
+			<td width="1615" height="1106">
+				<p>&nbsp;</p>
 				<p align="center">
-					<span style="font-family: Artifika;">
-					<span style="font-size: 400%;"><br>BENE'S CAREER ACADEMY<br></span><span style="font-size:150%"><br><br></span></span>
-				</p>
-				<p align="center">
-					<span style="font-family: Times New Roman; font-size:150%;">This certifies that<br><br><br></span>
-				</p>
-				<p align="center">
-					<span style="color: #0000ff; font-family: 'Baskerville Old Face'; font-size: 450%;">
-						<span style="text-decoration: underline;">[SFNAME] [SMNAME] [SLNAME]<br></span></span>
-				</p><p>&nbsp</p>
-				<p align="center">
-					<span>
-						<span style="font-family: 'Monotype Corsiva'; font-size:125%; padding-left:2em;"><br><br>Having satisfactorily completed the Course of Study by the Florida Department of Business and Professional Regulation-Cosmetology Board -Barbers Board- or the Florida<br>Department of Health Division of Medical Quality Assurance Board of Massage Therapy and Prescribed by [SCHOOLNAME]<br></span><br></span>
-				</p><p>&nbsp</p>
-				<p align="center">
-					<span style="font-family: 'Monotype Corsiva'; font-size: 450%;">[%SPROGRAMNAME]</span></span>
-				</p>
-				<p>&nbsp</p>
-				<p align="center">
-					<span></span>
-					<span><span style="font-family: 'Albertus ExtraBold'; font-size:150%;">
-						<span style="">Is Hereby Awarded This Diploma for [CLOCKHOURS] Clock Hours</span>
-					</span></span><br>
-					<i><span style="font-size:250%;">Given This [DATE]</span></i>
-				</p>
-				<table border="0" cellpadding="0" cellspacing="0" style="width: 1650px;">
+					<span style="font-family: Rockwell;"><span style="font-size: 400%;"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BENE'S CAREER ACADEMY<br></span> </span></p>
+				<p align="center"><span style="font-size:100%;"><br><br></span><span style="font-size: 450%;"><span><br>[SFNAME] [SMNAME] [SLNAME]</span></span></p>
+				<p align="center"><span><span style="font-family: 'Monotype Corsiva'; font-size: 125%;"><br><br><br>Having satisfactorily completed the Course of Study by the Florida Department of Business and Professional Regulation-Cosmetology Board - <br>Barbers Board- or the Florida Department of Health Division of Medical Quality Assurance Board of Massage Therapy and Prescribed by [SCHOOLNAME]<br><br></span><br /> <span style="font-family: 'Monotype Corsiva'; font-size: 450%;">[%SPROGRAMNAME]<br></span></span></p>
+				<p align="center"><span style="font-size:150%;"><br>Is Hereby Awarded This Diploma for [CLOCKHOURS] Clock Hours</span><br></span><span style="font-size:300%;"><i>Given This [DATE]</i></span></p>
+				<table border="0" cellpadding="0" cellspacing="0" style="width: 1615px;">
 					<tbody>
 						<tr>
-							<td width="750"><blockquote><blockquote><blockquote>
+							<td><blockquote><blockquote><blockquote>
 								<p align="center"><span><span style="font-size: medium;">
 									<span style="font-size: medium;"><strong>
-									<span><br><br><br><br><br><br>
+									<span><br><br><br><br>
 									<span style="font-family: 'Albertus ExtraBold';">________________________________________
 									<span>
 									<span style="font-family: 'Albertus ExtraBold';"><br><br>Patrick Bene, President</span></span></span></span> </strong></span>
 								</p></blockquote></blockquote></blockquote>
 							</td>
-							<td width="750"><blockquote><blockquote><blockquote>
+							<td><blockquote><blockquote><blockquote>
 								<p align="center"><span><span style="font-size: medium;">
 									<span style="font-size: medium;"><strong>
-									<span><br><br><br><br><br><br>
+									<span><br><br><br><br>
 									<span style="font-family: 'Albertus ExtraBold';">________________________________________
 									<span>
 									<span style="font-family: 'Albertus ExtraBold';"><br><br>Vicki Bene, Vice President</span></span></span></span> </strong></span>
@@ -53,14 +33,10 @@
 						</tr>
 					</tbody>
 				</table>
-				<p>&nbsp;
-				</p>
-				<p>&nbsp;
-				</p>
-				<p>&nbsp;
-				</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
-</html>
