Added ability to print background image
Added -webkit-print-color-adjust: exact;
to force browser to print background images

--- a/Email_Template Markup/Diploma.html
+++ b/Email_Template Markup/Diploma.html
@@ -1,4 +1,4 @@
-<!-- This is a version of the new diploma template for Bene's career academy. The background image was created in Photoshop and exported as an 11"x8.5", 150dpi .png file. The text for this document is derived from an example Dave had on hand, and the structure of this document is a modified version of the existing diploma. -->
+<!-- DO NOT USE THIS DIPLOMA TEMPLATE; IT'S THE WRONG SIZE!! This is a version of the new diploma template for Bene's career academy. The background image was created in Photoshop and exported as an 11"x7", 150dpi .png file. The text for this document is derived from an example Dave had on hand, and the structure of this document is a modified version of the existing diploma. -->
 <table align="center" border="0" background="https://i.imgur.com/ZYdG1P2.png" style="background-size: contain; background-repeat: no-repeat;">
 	<tbody>
 		<tr>
