--- a/Email_Template Markup/Diploma_kellyVersion.html
+++ b/Email_Template Markup/Diploma_kellyVersion.html
@@ -1,5 +1,5 @@
 <!-- This is a version of the new diploma template for Bene's career academy. The background image was created in Photoshop and exported as an 11"x8.5", 150dpi .png file. The text for this document is derived from an example Dave had on hand, and the structure of this document is a modified version of the existing diploma. -->
-<table align="center" border="0" background="https://i.imgur.com/GFznrJX.png" style="background-size: cover; background-repeat: no-repeat; -webkit-print-color-adjust: exact;">
+<table align="center" border="0" background="https://i.imgur.com/GFznrJX.png" style="background-size: cover; background-repeat: no-repeat;">
 	<tbody>
 		<tr>
 			<td width="1500" height="1225" style="padding-right: 15px;">
