Diploma template edits
Diploma3 added: uses uploaded school's logo instead of overlaying text on an image with the border and logo

--- a/Email_Template Markup/Diploma3.html
+++ b/Email_Template Markup/Diploma3.html
@@ -1,24 +1,20 @@
-<!-- DO NOT USE THIS DIPLOMA TEMPLATE; IT'S THE WRONG SIZE!! This is a version of the new diploma template for Bene's career academy. The background image was created in Photoshop and exported as an 11"x7", 150dpi .png file. The text for this document is derived from an example Dave had on hand, and the structure of this document is a modified version of the existing diploma. -->
-<table align="center" border="0" background="https://i.imgur.com/BuS3kjb.png" style="background-size: contain; background-repeat: no-repeat;">
+<!-- This diploma template uses a bordered background and overlays text and the school logo. Written for a 11"x8.5", 150dpi page. -->
+<table align="center" border="0" background="https://i.imgur.com/3RUlmCw.png" style="background-size: contain; background-repeat: no-repeat; -webkit-print-color-adjust: exact;">
 	<tbody>
 		<tr>
 			<td width="1500" height="1125">
 				<table>
 					<tbody>
-						<tr>
-							<td>1</td>
-							<td>2</td>
-							<td>3</td>
+						<tr height="300px">
+							<td width="450" valign="bottom"><span style="padding-left:100px;"><img src="https://i.imgur.com/nc1p6H7.jpg" alt="Bene's Logo" style="width:400px;height:174px"></span></td>
+							<td width="1000"><p align="left" style="font-size:450%; padding-left:px;"><br><span style="line-height:54px;">[SCHOOLNAME]</span></td>
 						</tr>
 					</tbody>
 				</table>
-				<p>&nbsp;</p>
-				<p align="center">
-					<span style="font-family: Rockwell;"><span style="font-size: 400%;"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BENE'S CAREER ACADEMY<br></span> </span></p>
-				<p align="center"><span style = "font-size: 150%"><br><br>This certifies that<br><br></span></p>
+				<p align="center"><span style = "font-size: 150%">This certifies that<br><br></span></p>
 				<p align="center"><span style="font-size:100%;"><br><br></span><span style="font-size: 450%;"><span>[SFNAME] [SMNAME] [SLNAME]</span></span></p>
 				<p align="center"><span><span style="font-size: 125%;"><br><br><br>Having satisfactorily completed the Course of Study by the Florida Department of Business and Professional Regulation-Cosmetology Board - <br>Barbers Board- or the Florida Department of Health Division of Medical Quality Assurance Board of Massage Therapy and Prescribed by [SCHOOLNAME]<br><br></span><br /> <span style="font-family: 'Monotype Corsiva'; font-size: 450%;">[%SPROGRAMNAME]<br></span></span></p>
-				<p align="center"><span style="font-size:150%;"><br>Is Hereby Awarded This Diploma for [%SPMINCLOCKHOURS] Clock Hours</span><br></span><span style="font-size:300%;"><i>Given This [DATE2]</i></span></p>
+				<p align="center"><span style="font-size:150%;"><br>Is Hereby Awarded This Diploma for [%SPMINCLOCKHOUR] Clock Hours</span><br></span><span style="font-size:300%;"><i>Given This [DATE2]</i></span></p>
 				<table border="0" cellpadding="0" cellspacing="0" style="width: 1500px;">
 					<tbody>
 						<tr>
