--- a/Email_Template Markup/Diploma_kellyVersion.html
+++ b/Email_Template Markup/Diploma_kellyVersion.html
@@ -9,7 +9,7 @@
 					<span style="font-size:200%"><br><br><br><br><br>This certifies that<br><br></span></p>
 				<p align="center"><span style="font-size:100%;"></span><span style="font-size: 475%;"><span>[SFNAME] [SMNAME] [SLNAME]</span></span></p>
 				<p align="center"><span><span style="font-family: 'Monotype Corsiva'; font-size: 125%;"><br><br>Having satisfactorily completed the Course of Study by the Florida Department of Business and Professional Regulation-Cosmetology Board - <br>Barbers Board- or the Florida Department of Health Division of Medical Quality Assurance Board of Massage Therapy and Prescribed by [SCHOOLNAME]<br><br><br></span><br /> <span style="font-family: 'Monotype Corsiva'; font-size: 450%;">[%SPROGRAMNAME]<br></span></span></p>
-				<p align="center"><span style="font-size:150%;"><br>Is Hereby Awarded This Diploma for [CLOCKHOURS] Clock Hours</span><br></span><span style="font-size:300%;"><i>Given This [DATE]</i></span></p>
+				<p align="center"><span style="font-size:150%;"><br>Is Hereby Awarded This Diploma for [%SPMINCLOCKHOURS] Clock Hours</span><br></span><span style="font-size:300%;"><i>Given This [DATE2]</i></span></p>
 				<table border="0" cellpadding="0" cellspacing="0" style="width: 1615px;">
 					<tbody>
 						<tr>
