--- a/Email_Template Markup/Student ID Badge_Card.html
+++ b/Email_Template Markup/Student ID Badge_Card.html
@@ -8,7 +8,7 @@
 		<tr style="height: 17.5pt;">
 			<td style="padding: 0in 5.4pt; width: 66.625px; height: 17.5pt; background-color: transparent; border: medium none #e0dfe3;" valign="top">
 				<p><span style="color: #000000; font-size: 10pt;"><strong><span style="font-family: Arial;">Name:</span></strong></span></p></td>
-			<td style="padding: 0in 5.4pt; width: 157.625px; height: 17.5pt; background-color: transparent; border: medium none #e0dfe3;" valign="top">
+			<td style="padding: 0in 5.4pt; width: 157.625px; height: 17.5pt; background-color: transparent; border: medium none #e0dfe3;" valign="center">
 				<span style="font-size: 10pt; font-family: Arial; color: #000000;">[SNAME]</span></td>
 			<td style="padding: 0in 5.4pt; width: 102.625px; height: 26.5pt; background-color: transparent; border: medium none #e0dfe3;" rowspan="4" valign="top">
 				<p>[SPICTURE]</p></td></tr>
